--- a/src/components/src.css
+++ b/src/components/src.css
@@ -1,140 +1,126 @@
-.storm-diagrams-canvas {
-  position: relative;
-  min-height: 600px;
-  border-color: red;
-  border-style: dashed;
-  border-width: 1px;
-  position: relative;
-  flex-grow: 1;
-  display: flex;
-  cursor: move;
-  overflow: hidden;
-}
-.storm-diagrams-canvas .point {
-  fill: rgba(255, 255, 255, 0.5);
-}
-.storm-diagrams-canvas .point.selected {
-  fill: #00c0ff;
-}
-.storm-diagrams-canvas .selector {
-  position: absolute;
-  background-color: rgba(0, 192, 255, 0.2);
-  border: solid 2px #00c0ff;
-}
-.storm-diagrams-canvas svg {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  transform-origin: 0 0;
-  overflow: visible;
-}
-.storm-diagrams-canvas .node-view {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  position: absolute;
-  pointer-events: none;
-  transform-origin: 0 0;
-}
-.storm-diagrams-canvas .node {
-  position: absolute;
-  -webkit-touch-callout: none;
-  /* iOS Safari */
-  -webkit-user-select: none;
-  /* Chrome/Safari/Opera */
-  user-select: none;
-  cursor: move;
-  pointer-events: all;
-}
-.storm-diagrams-canvas .node.selected > * {
-  border-color: #00c0ff !important;
-  box-shadow: 0 0 20px rgba(0, 192, 255, 0.5);
-}
+#root .app {
+  height: 100%; }
+  #root .app .algorithm-panel-wrapper {
+    float: left; }
+    #root .app .algorithm-panel-wrapper .storm-diagrams-canvas {
+      position: relative;
+      min-height: 600px;
+      border-color: red;
+      border-style: dashed;
+      border-width: 1px;
+      position: relative;
+      flex-grow: 1;
+      display: flex;
+      cursor: move;
+      overflow: hidden; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .point {
+        fill: rgba(255, 255, 255, 0.5); }
+        #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .point.selected {
+          fill: #00c0ff; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .selector {
+        position: absolute;
+        background-color: rgba(0, 192, 255, 0.2);
+        border: solid 2px #00c0ff; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas svg {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        transform-origin: 0 0;
+        overflow: visible; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .node-view {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        pointer-events: none;
+        transform-origin: 0 0; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .node {
+        position: absolute;
+        -webkit-touch-callout: none;
+        /* iOS Safari */
+        -webkit-user-select: none;
+        /* Chrome/Safari/Opera */
+        user-select: none;
+        cursor: move;
+        pointer-events: all; }
+        #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .node.selected > * {
+          border-color: #00c0ff !important;
+          box-shadow: 0 0 20px rgba(0, 192, 255, 0.5); }
+
 @keyframes dash {
   from {
-    stroke-dashoffset: 24;
-  }
+    stroke-dashoffset: 24; }
   to {
-    stroke-dashoffset: 0;
-  }
-}
-.storm-diagrams-canvas path {
-  fill: none;
-  pointer-events: all;
-}
-.storm-diagrams-canvas path.selected {
-  stroke: #00c0ff !important;
-  stroke-dasharray: 10, 2;
-  animation: dash 1s linear infinite;
-}
-.storm-diagrams-canvas .port {
-  width: 15px;
-  height: 15px;
-  background: rgba(255, 255, 255, 0.1);
-}
-.storm-diagrams-canvas .port:hover,
-.storm-diagrams-canvas .port.selected {
-  background: #c0ff00;
-}
-.storm-diagrams-canvas .basic-node {
-  background-color: #1e1e1e;
-  border-radius: 5px;
-  font-family: Arial;
-  color: white;
-  border: solid 2px black;
-  overflow: hidden;
-  font-size: 11px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.storm-diagrams-canvas .basic-node .title {
-  /*			background-image: linear-gradient(rgba(black,0.1),rgba(black,0.2));*/
-  background: rgba(0, 0, 0, 0.3);
-  display: flex;
-  white-space: nowrap;
-}
-.storm-diagrams-canvas .basic-node .title > * {
-  align-self: center;
-}
-.storm-diagrams-canvas .basic-node .title .fa {
-  padding: 5px;
-  opacity: 0.2;
-  cursor: pointer;
-}
-.storm-diagrams-canvas .basic-node .title .fa:hover {
-  opacity: 1;
-}
-.storm-diagrams-canvas .basic-node .title .name {
-  flex-grow: 1;
-  padding: 5px 5px;
-}
-.storm-diagrams-canvas .basic-node .ports {
-  display: flex;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
-}
-.storm-diagrams-canvas .basic-node .ports .in,
-.storm-diagrams-canvas .basic-node .ports .out {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
-.storm-diagrams-canvas .basic-node .ports .in-port,
-.storm-diagrams-canvas .basic-node .ports .out-port {
-  display: flex;
-  margin-top: 1px;
-}
-.storm-diagrams-canvas .basic-node .ports .in-port > *,
-.storm-diagrams-canvas .basic-node .ports .out-port > * {
-  align-self: center;
-}
-.storm-diagrams-canvas .basic-node .ports .in-port .name,
-.storm-diagrams-canvas .basic-node .ports .out-port .name {
-  padding: 0 5px;
-}
-.storm-diagrams-canvas .basic-node .ports .out-port {
-  justify-content: flex-end;
-}
-.storm-diagrams-canvas .basic-node .ports .out-port .name {
-  justify-content: flex-end;
-  text-align: right;
-}
+    stroke-dashoffset: 0; } }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas path {
+        fill: none;
+        pointer-events: all; }
+        #root .app .algorithm-panel-wrapper .storm-diagrams-canvas path.selected {
+          stroke: #00c0ff !important;
+          stroke-dasharray: 10,2;
+          animation: dash 1s linear infinite; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .port {
+        width: 15px;
+        height: 15px;
+        background: rgba(255, 255, 255, 0.1); }
+        #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .port:hover, #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .port.selected {
+          background: #c0ff00; }
+      #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node {
+        background-color: #1e1e1e;
+        border-radius: 5px;
+        font-family: Arial;
+        color: white;
+        border: solid 2px black;
+        overflow: hidden;
+        font-size: 11px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
+        #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .title {
+          /*			background-image: linear-gradient(rgba(black,0.1),rgba(black,0.2));*/
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          white-space: nowrap; }
+          #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .title > * {
+            align-self: center; }
+          #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .title .fa {
+            padding: 5px;
+            opacity: 0.2;
+            cursor: pointer; }
+            #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .title .fa:hover {
+              opacity: 1.0; }
+          #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .title .name {
+            flex-grow: 1;
+            padding: 5px 5px; }
+        #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports {
+          display: flex;
+          background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)); }
+          #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .in, #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .out {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column; }
+          #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .in-port, #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .out-port {
+            display: flex;
+            margin-top: 1px; }
+            #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .in-port > *, #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .out-port > * {
+              align-self: center; }
+            #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .in-port .name, #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .out-port .name {
+              padding: 0 5px; }
+          #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .out-port {
+            justify-content: flex-end; }
+            #root .app .algorithm-panel-wrapper .storm-diagrams-canvas .basic-node .ports .out-port .name {
+              justify-content: flex-end;
+              text-align: right; }
+  #root .app .nodes-menu {
+    float: left;
+    min-width: 200px;
+    flex-grow: 0;
+    flex-shrink: 0; }
+    #root .app .nodes-menu .nodes-menu-item {
+      font-family: Helvetica, Arial;
+      padding: 5px;
+      margin: 0px 10px;
+      border: solid 1px;
+      border-radius: 5px;
+      border-color: purple;
+      margin-bottom: 2px;
+      cursor: pointer; }
