--- a/src/components/src.css
+++ b/src/components/src.css
@@ -128,3 +128,10 @@
       border-color: purple; }
     #root .app .tray .nodes-menu .condition {
       border-color: green; }
+    #root .app .tray .messages {
+      border: solid 1px;
+      border-radius: 5px;
+      margin-bottom: 2px;
+      height: 500px;
+      width: 200px;
+      overflow: scroll; }
