--- a/src/components/src.scss
+++ b/src/components/src.scss
@@ -204,6 +204,15 @@
           align-content: center;
           padding: 5px;
         }
+
+        .mistake {
+          border-radius: 5px;
+          margin: 10px;
+          background-color: lightcoral;
+          align-content: center;
+          padding: 5px;
+        }
+
         .round {
           border-radius: 5px;
           margin: 10px;
