--- a/client/src/components/src.css
+++ b/client/src/components/src.css
@@ -166,7 +166,13 @@
     #root .app .tray .btn {
       border: solid 1px;
       border-radius: 5px;
-      margin-bottom: 2px;
-      width: 200px;
+      margin: 0 0 2 0px;
       text-align: center;
       padding: 20px 0; }
+  #root .app .menu .btn {
+    border: solid 1px;
+    border-radius: 5px;
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+    padding: 20px 0; }
