--- a/client/src/components/src.css
+++ b/client/src/components/src.css
@@ -169,10 +169,12 @@
       margin: 0 0 2 0px;
       text-align: center;
       padding: 20px 0; }
-  #root .app .menu .btn {
-    border: solid 1px;
-    border-radius: 5px;
-    width: 200px;
-    margin: 10px;
-    text-align: center;
-    padding: 20px 0; }
+  #root .app .menu {
+    display: flex; }
+    #root .app .menu .btn {
+      border: solid 1px;
+      border-radius: 5px;
+      width: 200px;
+      margin: 10px;
+      text-align: center;
+      padding: 20px 0; }
